<resources>
    <string name="app_name">TodaysEat</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Preference</string>
    <string name="title_notifications">MyPage</string>

    <string name="title_activity_login2">LoginActivity_2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="activityIndex_high">육체노동 등 평소\n신체활동량이 많은 경우</string>
    <string name="activityIndex_middle">규칙적인 생활로 보통의\n활동량을 가진 경우</string>
    <string name="activityIndex_low">가벼운 움직임만 하며\n활동량이 적은 경우</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>