<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.todayseat.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_preference"
        android:name="com.example.todayseat.ui.preference.PreferenceFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_preference" />

    <fragment
        android:id="@+id/navigation_my_page"
        android:name="com.example.todayseat.ui.myPage.MyPageFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_my_page" />
</navigation>