<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity2">

    <RadioButton
        android:id="@+id/AI_High"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="120dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AI_Middle" />

    <RadioButton
        android:id="@+id/meat_score4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioButton
        android:id="@+id/AI_Middle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="120dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/meat_score4" />

    <Button
        android:id="@+id/next_button"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="64dp"
        android:onClick="nextButton"
        android:text="다음"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/before_button"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="64dp"
        android:onClick="beforeButton"
        android:text="이전"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/next_button" />

    <TextView
        android:id="@+id/Text_AI_low"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="60dp"
        android:text="@string/activityIndex_low"
        android:textSize="18dp"
        app:layout_constraintStart_toEndOf="@+id/meat_score4"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Text_AI_middle"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="120dp"
        android:text="@string/activityIndex_middle"
        android:textSize="18dp"
        app:layout_constraintStart_toEndOf="@+id/AI_Middle"
        app:layout_constraintTop_toBottomOf="@+id/Text_AI_low" />

    <TextView
        android:id="@+id/Text_AI_high"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="120dp"
        android:text="@string/activityIndex_high"
        android:textSize="18dp"
        app:layout_constraintStart_toEndOf="@+id/AI_High"
        app:layout_constraintTop_toBottomOf="@+id/Text_AI_middle" />

</androidx.constraintlayout.widget.ConstraintLayout>